Fixed footer form alignment on desktop

--- a/app/globals.css
+++ b/app/globals.css
@@ -191,9 +191,12 @@ Nav links hover animation
 }
 
 .footer-form {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 @media only screen and (max-width: 600px) {
